--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,13 @@
   <name>InfosysApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>3.3.2</version>
-</plugin>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version>
+        </plugin>
+    </plugins>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -25,4 +27,5 @@
     <finalName>InfosysApp</finalName>
   </build>
 </project>
+
 
